[package]
name = "hyper_dict_macro"
version = "0.0.0"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

